// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading demo -- indicator 1`] = `
.c0 {
  position: relative;
}

.c0 .uc-fe-animation-fade-enter,
.c0 .uc-fe-animation-fade-appear,
.c0 .uc-fe-animation-fade-leave,
.c0 .uc-fe-animation-fade-exit {
  -webkit-animation-duration: 500ms;
  animation-duration: 500ms;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c0 .uc-fe-animation-fade-enter,
.c0 .uc-fe-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c0 .uc-fe-animation-fade-leave,
.c0 .uc-fe-animation-fade-exit {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c1 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 10;
  background: rgba(255,255,255,0.4);
}

.c2 {
  display: table;
  width: 100%;
  height: 100%;
}

.c2 > div {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        style="height:100px;background:gray;"
      />
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div>
            <img
              src="https://loading.io/spinners/balls/lg.circle-slack-loading-icon.gif"
              width="50"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        style="height:100px;background:gray;"
      />
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div>
            <img
              src="https://loading.io/spinners/coolors/lg.palette-rotating-ring-loader.gif"
              width="50"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Loading demo -- inlineBlock 1`] = `
.c4.c4.c4 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c0 {
  position: relative;
}

.c0 .uc-fe-animation-fade-enter,
.c0 .uc-fe-animation-fade-appear,
.c0 .uc-fe-animation-fade-leave,
.c0 .uc-fe-animation-fade-exit {
  -webkit-animation-duration: 500ms;
  animation-duration: 500ms;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c0 .uc-fe-animation-fade-enter,
.c0 .uc-fe-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c0 .uc-fe-animation-fade-leave,
.c0 .uc-fe-animation-fade-exit {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c1 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 10;
  background: rgba(255,255,255,0.4);
}

.c2 {
  display: table;
  width: 100%;
  height: 100%;
}

.c2 > div {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}

.c3 {
  font-size: 20px;
  color: #526075;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
      style="display:inline-block;"
    >
      <div
        style="height:100px;display:inline-block;background:gray;"
      >
        <p
          style="color:red;"
        >
          this is content
        </p>
      </div>
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div>
            <i
              class="c3 uc-fe-icon icon__loading uc-fe-icon-spin c4"
              type="loading"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
      style="display:inline-block;"
    >
      <div
        style="height:100px;width:100px;background:gray;"
      />
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div>
            <i
              class="c3 uc-fe-icon icon__loading uc-fe-icon-spin c4"
              type="loading"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Loading demo -- loading 1`] = `
.c16 {
  position: relative;
}

.c16 .uc-fe-animation-fade-enter,
.c16 .uc-fe-animation-fade-appear,
.c16 .uc-fe-animation-fade-leave,
.c16 .uc-fe-animation-fade-exit {
  -webkit-animation-duration: 500ms;
  animation-duration: 500ms;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c16 .uc-fe-animation-fade-enter,
.c16 .uc-fe-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c16 .uc-fe-animation-fade-leave,
.c16 .uc-fe-animation-fade-exit {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c10 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c13 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c6 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c6:hover {
  border-color: #4683e6;
}

.c6 .c12 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c6 .c14 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c6 .c7 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c6 .c9,
.c6 .c11 {
  line-height: 16px;
}

.c6 .c9 {
  padding-right: 20px;
}

.c6 .c11 {
  padding-left: 20px;
}

.c6 .c9 {
  display: none;
}

.c17 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #fff;
  background: #4683e6;
  border-color: #4683e6;
}

.c17:hover {
  color: #fff;
  background: #3664c8;
  border-color: #3664c8;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        loading
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c10"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        showTip
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c10"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c16"
    >
      <div
        style="height:100px;background:gray;"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c17"
          style="display:block;width:200px;margin:0 auto;top:20px;position:relative;"
          type="button"
        >
          Start To Loading
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Loading demo -- showLoading 1`] = `
.c4.c4.c4 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c0 {
  position: relative;
}

.c0 .uc-fe-animation-fade-enter,
.c0 .uc-fe-animation-fade-appear,
.c0 .uc-fe-animation-fade-leave,
.c0 .uc-fe-animation-fade-exit {
  -webkit-animation-duration: 500ms;
  animation-duration: 500ms;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c0 .uc-fe-animation-fade-enter,
.c0 .uc-fe-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c0 .uc-fe-animation-fade-leave,
.c0 .uc-fe-animation-fade-exit {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c1 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 10;
  background: rgba(255,255,255,0.4);
}

.c2 {
  display: table;
  width: 100%;
  height: 100%;
}

.c2 > div {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}

.c3 {
  font-size: 20px;
  color: #526075;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        style="height:100px;background:gray;"
      />
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div>
            <i
              class="c3 uc-fe-icon icon__loading uc-fe-icon-spin c4"
              type="loading"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        style="height:100px;background:gray;"
      />
    </div>
  </div>
</div>
`;
